added panel_bit_depth for model
